# Truth-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
eval/: README.md  opus_eval.py  prompt_evolver.py
eval/evolver/: __init__.py  fitness.py  ga.py  genome.py  report.py  runner.py
eval/sotu-2026/: README.md  reference.json  reference.md  sources.md  transcript.txt  transcript_urls.md
eval/sotu-2026/evolution_results/: best_prompts.json  comparison_table.md  evolution_log.json  fitness_report.md  generation_01.json  generation_02.json  generation_03.json  generation_04.json  generation_05.json
eval/sotu-2026/opus-4-7-results/: best_prompts.json  evolution_log.json  fitness_report.md  generation_01.json
eval/sotu-2026/opus-optimized-results/: results.json
src/truthbot/: __init__.py  config.py  models.py  pipeline.py
src/truthbot/cache/: __init__.py  claims.py
src/truthbot/extract/: __init__.py  claims.py
src/truthbot/ingest/: __init__.py  transcript.py
src/truthbot/publish/: __init__.py  api.py  bluesky.py  cards.py  rss.py  web.py
src/truthbot/scoring/: __init__.py  rubric.py
src/truthbot/verify/: __init__.py  engine.py
src/truthbot/verify/sources/: __init__.py  base.py  brave.py  factcheck.py  government.py
tests/: conftest.py  test_api.py  test_bluesky.py  test_cache.py  test_cards.py  test_extract.py  test_ingest.py  test_pipeline.py  test_rss.py  test_scoring.py  test_sources.py  test_verify.py  test_web.py
